<resources>
    <string name="app_name">Server</string>
    <string name="next">Next</string>
    <string name="get">Get</string>
    <string name="api">Api openweathermap Catania</string>
    <string name="next2">Next</string>
    <string name="get2">Get</string>
    <string name="api2">Example get json</string>
    <string name="api3">api value</string>
    <string name="getHTML">get HTML</string>
    <string name="get3">List teachers</string>
    <string name="get3a">List students</string>
</resources>
