<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorbackground">

    <TextView
        android:id="@+id/text_view_result4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:textColor="@color/colortextview"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="5dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/get4"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:layout_marginRight="05dp"
            android:background="@drawable/button_gradient"
            android:padding="05dp"
            android:text="@string/get3"
            android:textColor="@color/colortext" />

        <Button
            android:id="@+id/get4a"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_gradient"
            android:padding="05dp"
            android:text="@string/get3a"
            android:textColor="@color/colortext" />

        <Button
            android:id="@+id/next4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_gradient"
            android:padding="05dp"
            android:text="@string/next"
            android:textColor="@color/colortext"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
